[gd_scene load_steps=7 format=3 uid="uid://ykv6f55ab02i"]

[ext_resource type="Script" path="res://scenes/robot.gd" id="1_n0cdj"]
[ext_resource type="PackedScene" uid="uid://dv5le75l015h3" path="res://scenes/components/electricity_receiver_component.tscn" id="2_2qflw"]
[ext_resource type="Texture2D" uid="uid://c0pob43ou4r4u" path="res://assets/robot/robot.png" id="2_mv1sc"]
[ext_resource type="Texture2D" uid="uid://djil48q11t72" path="res://assets/light/circle.png" id="3_nyjvg"]

[sub_resource type="CircleShape2D" id="CircleShape2D_jojqk"]
radius = 127.004

[sub_resource type="CircleShape2D" id="CircleShape2D_bsbo3"]
radius = 180.011

[node name="Robot" type="CharacterBody2D"]
collision_layer = 2
collision_mask = 15
motion_mode = 1
script = ExtResource("1_n0cdj")
_move_speed = 500.0
_rotation_speed = 3.0
_push_force = 10000.0

[node name="ElectricityReceiverComponent" parent="." instance=ExtResource("2_2qflw")]

[node name="Sprite2D" type="Sprite2D" parent="."]
rotation = 3.14159
texture = ExtResource("2_mv1sc")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
shape = SubResource("CircleShape2D_jojqk")

[node name="GarbageCaptureArea" type="Area2D" parent="."]
visible = false
collision_layer = 2
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="GarbageCaptureArea"]
shape = SubResource("CircleShape2D_bsbo3")

[node name="PointLightRed" type="PointLight2D" parent="."]
position = Vector2(-29, -33)
color = Color(0.728417, 0.156644, 0.150435, 1)
texture = ExtResource("3_nyjvg")
texture_scale = 0.05

[node name="PointLightGreen" type="PointLight2D" parent="."]
position = Vector2(28, -33)
color = Color(0.191198, 0.486082, 0.186145, 1)
texture = ExtResource("3_nyjvg")
texture_scale = 0.05
